test/success/protocol/default_impl_in_generic/main.sk
module Main {

struct Foo {

}

protocol Bar[T] {
    fn bar(&self) -> ()

    fn defaultbar(&self) -> () {

    }
}

impl Foo Bar[Foo] {
    fn bar(&self) -> () {

    }
}

fn generic[T: Bar[T]](t: T) {
    t.defaultbar();
}

fn main() {
    let f = Foo();
    f.bar();
    f.defaultbar();
    generic(f);
}

}