test/errors/traits/canonical_impl_not_canonical_type/main.sk
module Main {

struct Foo {

}

protocol P[T] {
    fn bar(&self)
}

impl P[()] {
    fn bar(&self) {
    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}